--- a/facebook-cleaner/style.css
+++ b/facebook-cleaner/style.css
@@ -1,3 +1,3 @@
-#pagelet_netego, #pagelet_pymkbox, #pagelet_pokebox, #pagelet_connectbox {
+#pagelet_betabox, #pagelet_netego, #pagelet_pymkbox, #pagelet_pokebox, #pagelet_connectbox {
 	display:none;
 }
